fixed responsiveness on smaller devices and updated vite to auto load on save in dev mode

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -22,7 +22,7 @@
     --size-text-small: 1rem;
     --size-text-medium: 1.7rem;
     --size-text-big: 6rem;
-    --size-text-title-mobile: 5.2rem;
+    --size-text-title-mobile: 5rem;
     --size-text-large: 2.5rem;
     --size-text-xlarge: 3.33rem;
     --card-border-radius: .2rem;
